--- a/src/main/res/values/attrs.xml
+++ b/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	    
+
     <declare-styleable name="BottomNavigationBar">
         <attr name="showType" format="enum">
             <enum name="normal" value="0"></enum>
@@ -11,9 +11,19 @@
         <attr name="textUnCheckedColor" format="color"/>
 		<attr name="textSize" format="dimension"/>
     </declare-styleable>
-    
-      <declare-styleable name="MusicView">  
-        <attr name="textTint" format="string"/>  
+
+	<declare-styleable name="MusicView"> 
+		<attr name="playStack" format="enum">
+            <enum name="play" value="0"></enum>
+            <enum name="stop" value="1"></enum>
+        </attr>
+        <attr name="title" format="string"/>  
+		<attr name="subTitle" format="string"/>  
+		<attr name="coverImage" format="reference"/>  
   	</declare-styleable>
-	
+
+	<declare-styleable name="Fragment">  
+        <attr name="android:name"/>  
+  	</declare-styleable>
+
 </resources>
