--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="background">#FFEFEFEF</color>
+	<color name="colorAccent">#ff80c783</color>
+	<color name="searchUiColor">#FF4EC7A0</color>
+
+	<color name="default_checked_color">@color/colorAccent</color>
+	<color name="default_unchecked_color">#8A898E</color>
 </resources>
