--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:textColor="@android:color/black"
         android:text="@string/app_name"
         android:id="@+id/text_notifications"
         android:layout_width="match_parent"
