--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,20 @@
 <resources>
 
+    <dimen name="height_edittext">55dp</dimen>
+
+    <dimen name="size_album">60dp</dimen>
+
+    <dimen name="item_margin">13dp</dimen>
+    <dimen name="item_margin_small">6dp</dimen>
+
+    <dimen name="default_margin">10dp</dimen>
+
+    <dimen name="text_margin">8dp</dimen>
+
+    <dimen name="text_margin_small">5dp</dimen>
+    <dimen name="nav_height">56dp</dimen>
+
+    <dimen name="item_album_width">110dp</dimen>
 
     <dimen name="umano_shadow_height">3dp</dimen>
 
