--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,7 @@
         <mandysax.fragmentpage.widget.FragmentPage
             android:id="@+id/main_fragment_page"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="?android:attr/dividerVertical" />
-
-        </mandysax.fragmentpage.widget.FragmentPage>
+            android:layout_height="match_parent" />
 
         <FrameLayout
             android:layout_width="match_parent"
