--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
         <item name="cardBackgroundColor">#EEEEEE</item>
         <item name="cardElevation">0dp</item>
     </style>
+
+    <style name="AppSmallTitle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
 </resources>
