优化图片加载

--- a/app/src/main/res/layout/fragment_controller.xml
+++ b/app/src/main/res/layout/fragment_controller.xml
@@ -12,11 +12,10 @@
         android:layout_height="48dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin">
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/controller_cover"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:ignore="ContentDescription" />
+            android:layout_height="match_parent" />
 
     </androidx.cardview.widget.CardView>
 
