--- a/app/src/main/res/layout/fragment_controller.xml
+++ b/app/src/main/res/layout/fragment_controller.xml
@@ -7,7 +7,7 @@
     android:gravity="center_vertical">
 
     <androidx.cardview.widget.CardView
-        style="@style/imageCardView"
+        style="@style/ImageCardViewStyle"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin">
