--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,16 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_notifications"
+    <EditText
+        android:id="@+id/search_edit_frame"
+        style="@style/AppEditTextStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/app_name"
-        android:textAlignment="center"
-        android:textColor="@android:color/black"
-        android:textSize="20sp" />
+        android:layout_height="@dimen/height_edittext"
+        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+        android:autofillHints="no"
+        android:hint="@string/search_hint"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:padding="@dimen/default_margin"
+        android:singleLine="true"
+        android:textSize="16sp" />
+
 </FrameLayout>
