--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="viewCardView">
+    <style name="ViewCardViewStyle">
         <item name="cardCornerRadius">@dimen/card_corner_radius</item>
         <item name="cardElevation">0dp</item>
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
     </style>
 
-    <style name="imageCardView">
+    <style name="ImageCardViewStyle">
         <item name="cardCornerRadius">@dimen/card_corner_radius</item>
         <item name="cardBackgroundColor">#EEEEEE</item>
         <item name="cardElevation">0dp</item>
     </style>
 
-    <style name="AppSmallTitle">
+    <style name="AppSmallTitleStyle">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="AppEditTextStyle">
+        <item name="android:gravity">center|start</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/all_et_bg</item>
     </style>
 
 </resources>
