--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,10 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>-->
+    <color name="teal_700">#FF018786</color>-->
+    <color name="main">#96a48b</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#a1afc9</color>
+    <color name="blue">#c1cbd7</color>
 
     <color name="edittext_color">#EEEEF0</color>
 </resources>
