--- a/statelayout/src/main/res/values/attrs.xml
+++ b/statelayout/src/main/res/values/attrs.xml
@@ -4,5 +4,6 @@
         <attr name="emptyLayout" format="reference" />
         <attr name="loadingLayout" format="reference" />
         <attr name="errorLayout" format="reference" />
+        <attr name="contentLayout" format="reference" />
     </declare-styleable>
 </resources>
