--- a/app/src/main/res/layout/item_my_head.xml
+++ b/app/src/main/res/layout/item_my_head.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
@@ -20,10 +21,11 @@
         app:cardCornerRadius="20dp"
         app:cardElevation="0dp">
 
-        <com.facebook.drawee.view.DraweeView
+        <ImageView
             android:id="@+id/my_avatar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:ignore="ContentDescription" />
 
     </androidx.cardview.widget.CardView>
 </FrameLayout>
