--- a/app/src/main/res/layout/item_playlist_info_head.xml
+++ b/app/src/main/res/layout/item_playlist_info_head.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -22,11 +23,12 @@
             android:layout_width="110dp"
             android:layout_height="110dp">
 
-            <com.facebook.drawee.view.SimpleDraweeView
+            <ImageView
                 android:id="@+id/cover"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:foreground="?android:attr/selectableItemBackground" />
+                android:foreground="?android:attr/selectableItemBackground"
+                tools:ignore="ContentDescription" />
 
         </androidx.cardview.widget.CardView>
 
