--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,35 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/search_edit_frame"
+        style="@style/AppEditTextStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:ignore="UselessParent">
+        android:layout_height="@dimen/height_edittext"
+        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+        android:autofillHints="no"
+        android:drawableStart="@drawable/ic_search"
+        android:hint="@string/search_hint"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:padding="@dimen/default_margin"
+        android:singleLine="true"
+        android:textSize="16sp" />
 
-        <EditText
-            android:id="@+id/search_edit_frame"
-            style="@style/AppEditTextStyle"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/height_edittext"
-            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-            android:layout_weight="1.0"
-            android:autofillHints="no"
-            android:hint="@string/search_hint"
-            android:imeOptions="actionSearch"
-            android:inputType="text"
-            android:padding="@dimen/default_margin"
-            android:singleLine="true"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name" />
-
-    </LinearLayout>
-
-</FrameLayout>
+    <FrameLayout
+        android:id="@+id/show"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
