适配win11 BottomNavigationBar翻新，基于jiowo和mandysax 优化性能

--- a/app/src/main/res/drawable/all_et_bg.xml
+++ b/app/src/main/res/drawable/all_et_bg.xml
@@ -4,5 +4,5 @@
 
     <corners android:radius="@dimen/card_corner_radius" />
 
-    <solid android:color="@color/edittext_color" />
+    <solid android:color="@color/edit_text_bg_color" />
 </shape>
