--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--推荐歌单item-->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="110dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:orientation="vertical"
-        tools:ignore="UseCompoundDrawables,UselessParent">
+        tools:ignore="UselessParent">
 
         <androidx.cardview.widget.CardView
             style="@style/ImageCardViewStyle"
             android:layout_width="match_parent"
-            android:layout_height="110dp">
+            android:layout_height="95dp">
 
             <ImageView
                 android:id="@+id/playlist_cover"
@@ -30,7 +31,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:gravity="center"
             android:maxLines="2"
             android:textColor="@android:color/black"
             android:textSize="11sp"
