--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/controller_fragment"
                 android:name="studio.mandysa.music.ui.controller.ControllerFragment"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="@dimen/nav_height"
                 tools:ignore="Instantiatable" />
 
             <fragment
@@ -46,12 +46,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@color/white">
+        android:background="@android:color/white">
 
         <studio.mandysa.bottomnavigationbar.BottomNavigationBar
             android:id="@+id/bottomNavigationBar"
             android:layout_width="match_parent"
-            android:layout_height="56dp" />
+            android:layout_height="@dimen/nav_height"
+            android:orientation="vertical"
+            android:overScrollMode="never"
+            android:scrollbars="none" />
 
         <View
             android:layout_width="match_parent"
