--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--歌曲item-->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
@@ -13,8 +14,8 @@
 
         <androidx.cardview.widget.CardView
             style="@style/ImageCardViewStyle"
-            android:layout_width="@dimen/size_album"
-            android:layout_height="@dimen/size_album"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
             android:layout_marginVertical="@dimen/item_margin">
 
@@ -47,9 +48,8 @@
                 android:layout_marginTop="@dimen/text_margin_small"
                 android:lines="1"
                 android:singleLine="true"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textSize="13sp"
-                android:textStyle="normal" />
+                android:textColor="@color/test2"
+                android:textSize="13sp" />
 
         </LinearLayout>
 
