--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--<color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>-->
-    <color name="main">#96a48b</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="blue">#c1cbd7</color>
+    <color name="border_color">#FFEFEFEF</color>
 
-    <color name="edittext_color">#EEEEF0</color>
+    <color name="test2">#7A7A7A</color>
+    <color name="main">#006DCC</color>
+    <color name="blue">#FF2A81D2</color>
+
+    <color name="edit_text_bg_color">#EEEEF0</color>
 </resources>
