修复导航打开两个fragment之后回退会导致闪退的问题 修复fragment生命周期不跟随导航的问题 修复了几处内存泄漏隐患

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,9 +52,7 @@
             android:id="@+id/bottomNavigationBar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/nav_height"
-            android:orientation="vertical"
-            android:overScrollMode="never"
-            android:scrollbars="none" />
+            android:overScrollMode="never" />
 
         <View
             android:layout_width="match_parent"
