修复LiveData可能会重复添加Observe的问题 修复LiveData在Lifecycle的Destroy状态能继续添加Observe的问题

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -49,7 +49,7 @@
 
         <fragment
             android:id="@+id/search_list_fragment"
-            android:name="studio.mandysa.music.ui.searchlist.SearchListFragment"
+            android:name="studio.mandysa.music.ui.search.searchlist.SearchListFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:ignore="Instantiatable" />
