--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<studio.mandysa.statelayout.StateLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/statelayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:context=".ui.home.HomeFragment">
 
-   <!-- <studio.mandysa.bottomnavigationbar.BottomNavigationBar
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />-->
-
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:overScrollMode="never" />
+</studio.mandysa.statelayout.StateLayout>
