--- a/app/src/main/res/layout/item_playlist_info_head.xml
+++ b/app/src/main/res/layout/item_playlist_info_head.xml
@@ -3,15 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
     android:orientation="vertical">
 
     <TextView
-        android:layout_width="match_parent"
+        style="@style/AppSmallTitleStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/playlist"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/default_margin"
+        android:layout_marginBottom="@dimen/text_margin_small"
+        android:text="@string/playlist" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,15 +37,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:gravity="center|start"
+                android:textColor="@color/fragment_play_button_color"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/todo"
+                android:gravity="bottom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
