--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,9 @@
     </style>
 
     <style name="AppEditTextStyle">
+        <item name="android:textCursorDrawable">@drawable/all_et_cursor_color</item>
         <item name="android:gravity">center|start</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:padding">10dp</item>
         <item name="android:background">@drawable/all_et_bg</item>
     </style>
