--- a/statelayout/src/main/res/values/attrs.xml
+++ b/statelayout/src/main/res/values/attrs.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="StateLayout">
-        <attr name="emptyLayout" format="reference" />
-        <attr name="loadingLayout" format="reference" />
-        <attr name="errorLayout" format="reference" />
-       <!-- <attr name="contentLayout" format="reference" />-->
+        <attr name="emptyLayoutId" format="reference" />
+        <attr name="loadingLayoutId" format="reference" />
+        <attr name="errorLayoutId" format="reference" />
     </declare-styleable>
 </resources>
