优化了DialogFragment，现在完全可用 添加些许注释

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,9 @@
         <item name="android:background">@drawable/all_et_bg</item>
     </style>
 
+    <style name="MyDialog">
+        <!-- 是否有边框 -->
+        <item name="android:windowFrame">@null</item>
+    </style>
+
 </resources>
